--- a/style.css
+++ b/style.css
@@ -173,6 +173,63 @@ body {
   margin-left: 0.5rem; /* ml-2 */
 }
 
+.congrats-container {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  width: 450px;
+  height: 450px;
+  background-color: var(--blue-2);
+  border-radius: 0.75rem; /* rounded-xl */
+  padding: 1rem;
+  box-sizing: border-box;
+}
+
+.congrats-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.congrats-content img,
+.congrats-content div {
+  margin-bottom: 1rem; /* mb-4 */
+}
+
+.congrats-title {
+  color: var(--font-color);
+  font-size: 1.5rem; /* text-2xl */
+  font-weight: 600; /* font-semibold */
+  text-align: center;
+}
+
+.congrats-score {
+  color: var(--font-color);
+  font-size: 1.125rem; /* text-l */
+  font-weight: 600; /* font-semibold */
+}
+
+.play-again-button {
+  background-image: linear-gradient(
+    to right,
+    var(--gradient-1),
+    var(--gradient-2)
+  );
+  color: var(--font-color);
+  font-size: 1.25rem; /* text-xl */
+  font-weight: 600; /* font-semibold */
+  width: 18rem; /* w-72 */
+  height: 4rem; /* h-16 */
+  margin: 1.25rem; /* m-5 */
+  border-radius: 0.75rem; /* rounded-xl */
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  cursor: pointer;
+}
+
 .loading,
 .error {
   color: white;
